--- a/assets/ananke/css/custom.css
+++ b/assets/ananke/css/custom.css
@@ -1,3 +1,28 @@
 .cover-bg-red {
   background-color: #6d07009a;
 }
+
+.member-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.image-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.name {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-bottom: 0;
+}
