about page kinda works but there are more issues

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -4,13 +4,20 @@
     <article class="center cf pv5 ph3 ph4-ns mw7">
         <header>
             <h1 class="f1"> 
-                {{ .Title }}
+            {{range .Site.Pages}}
+              <img src="{{.Params.member|absURL }}"> 
+              Name:{{.Params.name}}
+              Type:{{.Params.membertype}}
+              Position:{{.Params.position}}
+              <!-- {{.Content}} -->
+            {{end}}
+    
             </h1>
         </header>
-        <div class= "member-grid-container nested-copy-line-height lh-copy f4 nested-links {{ $.Param " text_color" | default "mid-gray" }}" >
-            {{ .Content }}
-        </div>
-
+        <!-- <div class= "member-grid-container nested-copy-line-height lh-copy f4 nested-links {{ $.Param " text_color" | default "mid-gray" }}" >
+            {{ .Content }} 
+        </div> -->
+        
     </article>
 </div>
 {{ end }}
