--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -1,17 +1,35 @@
 {{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
-{{range .Site.Pages}}
+
+
+<section class="service-about section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>{{ .Params.title  }}</h2>
+          <p class="mt-30">{{.Params.content}}</p>
+        </div>
+        <div class="col-md-6">
+          <img class="img-responsive" src="{{ .Params.image | absURL }}">
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 <div class="flex-l mt2 mw8 center">
     <article class="center cf pv5 ph3 ph4-ns mw7">
         <header>
             <h1 class="f1"> 
-            
+                {{range (where .Site.Pages "Params.membertype" "Exec")}}
               <img src="{{.Params.member|absURL }}"> 
-              Name:{{.Params.name}}
-              Type:{{.Params.membertype}}
-              Position:{{.Params.position}}
-              <!-- {{.Content}} -->
-            
+              <h1>Name:{{.Params.name}}</h1>
+              <h1>Type:{{.Params.membertype}}</h1>
+              <h1>Position:{{.Params.position}}</h1>
+                <div class= "member-grid-container nested-copy-line-height lh-copy f4 nested-links {{ $.Param " text_color" | default "mid-gray" }}" >
+                {{ .Content }} 
+                  </div>
+              {{end}}
     
             </h1>
         </header>
@@ -21,5 +39,6 @@
         
     </article>
 </div>
-{{end}}
+
 {{ end }}
+
