--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -1,17 +1,17 @@
 {{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
 
-
 <section class="service-about section">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2>{{ .Params.title  }}</h2>
-          <p class="mt-30">{{.Params.content}}</p>
+          <h2 class="text-center">{{ .Params.title }}</h2>
+          <p class = "text-center">{{.Params.description}}</p>
+          <p class= "text-center">{{.Content}}</p>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <img class="img-responsive" src="{{ .Params.image | absURL }}">
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -19,26 +19,26 @@
 
 <div class="flex-l mt2 mw8 center">
     <article class="center cf pv5 ph3 ph4-ns mw7">
-        <header>
-            <h1 class="f1"> 
-                {{range (where .Site.Pages "Params.membertype" "Exec")}}
-              <img src="{{.Params.member|absURL }}"> 
-              <h1>Name:{{.Params.name}}</h1>
-              <h1>Type:{{.Params.membertype}}</h1>
-              <h1>Position:{{.Params.position}}</h1>
-                <div class= "member-grid-container nested-copy-line-height lh-copy f4 nested-links {{ $.Param " text_color" | default "mid-gray" }}" >
-                {{ .Content }} 
-                  </div>
-              {{end}}
-    
-            </h1>
-        </header>
+        <header></header>
         <!-- <div class= "member-grid-container nested-copy-line-height lh-copy f4 nested-links {{ $.Param " text_color" | default "mid-gray" }}" >
             {{ .Content }} 
         </div> -->
+        <div class="member-grid-container"> 
+          {{range (where .Site.Pages "Params.people" "people")}}
+          <div class="member-container text-center" >
+            <img class = "image_resize" src="{{.Params.member|absURL }}"> 
+            <div><h3>{{.Params.name}}</h3></div>
+            <div>{{.Params.position}}</div>
+            <div class>{{.Params.degree}}</div>
+            <div class= >
+              {{ .Content }} 
+            </div>
+          </div>
+        {{end}}
+
+        </div>
         
     </article>
 </div>
 
 {{ end }}
-
