--- a/themes/ananke/layouts/index.html
+++ b/themes/ananke/layouts/index.html
@@ -12,7 +12,7 @@
     {{/* Derive the section name  */}}
     {{ $section_name := index (.Site.Params.mainSections) 0 }}
 
-    <div class="pa3 pa4-ns w-100 w-70-ns center">
+    <!-- <div class="pa3 pa4-ns w-100 w-70-ns center">
       {{/* Use $section_name to get the section title. Use "with" to only show it if it exists */}}
        {{ with .Site.GetPage "section" $section_name }}
           <h1 class="flex-none">
@@ -50,6 +50,6 @@
         </section>
       {{ end }}
 
-      </div>
+      </div> -->
   {{ end }}
 {{ end }}
