Finished FIrst DRAFT!!!

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -1,44 +1,99 @@
 {{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
-
+<!-- 
 <section class="service-about section">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <h2 class="text-center">{{ .Params.title }}</h2>
           <p class = "text-center">{{.Params.description}}</p>
-          <p class= "text-center">{{.Content}}</p>
+          
         </div>
-        <!-- <div class="col-md-6">
+        <div class="col-md-6">
           <img class="img-responsive" src="{{ .Params.image | absURL }}">
-        </div> -->
+        </div>
       </div>
     </div>
-  </section>
+  </section> -->
+
+  <div class="flex-l mt2 mw8 center">
+    <article class="">
+      <h1 class ="text-center">Executive Team</h1>      
+          <div class="executive-grid-container"> 
+            {{range (where .Site.Pages "Params.rank" "Executive Team")}}
+            <div class="member-container text-center " >
+              <img class = "image_resize" src="{{.Params.member|absURL }}"> 
+              <div class ="position-text font">{{.Params.position}}</div> 
+              <div class ="name font">{{.Params.name |markdownify }}</div>
+              <div>{{.Params.degree| markdownify }}</div>
+              <div>{{ .Content }}</div>
+            </div>
+        {{end}}
+        </div>
+    </article>
+</div> 
 
 
 <div class="flex-l mt2 mw8 center">
-    <article class="center cf pv5 ph3 ph4-ns mw7">
-        <header></header>
-        <!-- <div class= "member-grid-container nested-copy-line-height lh-copy f4 nested-links {{ $.Param " text_color" | default "mid-gray" }}" >
-            {{ .Content }} 
-        </div> -->
-        <div class="member-grid-container"> 
-          {{range (where .Site.Pages "Params.people" "people")}}
-          <div class="member-container text-center" >
+    <article class=>
+      <h1 class ="text-center">Commissioner Team</h1>
+         <div class="member-grid-container"> 
+          {{range (where .Site.Pages "Params.rank" "Commissioner Team")}}
+          <div class="member-container text-center " >
             <img class = "image_resize" src="{{.Params.member|absURL }}"> 
-            <div><h3>{{.Params.name}}</h3></div>
-            <div>{{.Params.position}}</div>
-            <div class>{{.Params.degree}}</div>
-            <div class= >
-              {{ .Content }} 
-            </div>
+            <div class ="position-text font">{{.Params.position}}</div> 
+            <div class ="name font">{{.Params.name |markdownify }}</div>
+            <div>{{.Params.degree| markdownify }}</div>
+           
+            <div>{{ .Content }}</div>
           </div>
         {{end}}
-
         </div>
-        
     </article>
-</div>
+</div> 
+
+<div class="flex-l mt2 mw8 center">
+  <article class=>
+    <h1 class ="text-center">Representatives</h1>
+       <div class="row member-grid-container"> 
+        {{range (where .Site.Pages "Params.people" "people")}}
+        <div class="member-container text-center " >
+          <img class = "image_resize" src="{{.Params.member|absURL }}"> 
+          <div class ="position-text font">{{.Params.position}}</div> 
+          <div class ="name font">{{.Params.name |markdownify }}</div>
+          <div>{{.Params.degree| markdownify }}</div>
+         
+          <div>{{ .Content }}</div>
+        </div>
+      {{end}}
+      </div>
+  </article>
+</div> 
+
+<!-- <section class="service">
+  <div class="container">
+    <div class="row">
+      <div class="section-title">
+        <h2>{{.Params.executive_team.title}}</h3>
+        <p>{{.Params.executive_team.description}}</p>
+      </div>
+    </div>
+    <div class="row council-container">
+      {{range (sort (where .Site.Pages "Params.people" "people"))}}
+        <div class="col-sm-6 col-md-3">
+          <div class="service-item">
+            <img class="img-responsive img-council" src="{{ .Params.member | absURL }}">
+            <h3>{{ .Params.name | markdownify }}</h3>
+            <p>{{.Params.degree}}</p>
+            <a href="mailto:{{.Params.email}}"><i class="ion-ios-email-outline council-email"></i></a>
+            <h4>{{ .Params.position | markdownify }}</h4>
+            <p>{{ .Content }}</p>
+          </div>
+        </div>
+      {{end}}
+    </div>
+  </div>
+</section>
+ -->
 
 {{ end }}
