--- a/assets/ananke/css/custom.css
+++ b/assets/ananke/css/custom.css
@@ -4,25 +4,35 @@
 
 .member-grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
- 
-
+  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-gap: 40px; 
 }
 
+.executive-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 40px; 
+}
+
+
 .image_resize{
-  clip-path:circle()
+   width: 180px;
+  height: 180px;
+  object-fit: cover;
+  max-width: 180px !important;
+  max-height: 180px !important;
+  border-radius: 20px;
+  
 }
 
 
 .member-container {
   display: flex;
+  flex-wrap: warp;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100%;
-
-
+  height: 100%; 
 }
 
 .title {
@@ -32,11 +42,30 @@
 }
 
 .name {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 400;
-  margin-bottom: 0;
+  padding-bottom: 10px;
+  
+}
+
+.font{
+  font-family:'Times New Roman', Times, serif
 }
 
 .text-center {
   text-align: center;
 }
+
+/* FUCK YOU MO */
+
+.position-text{
+  padding-top: 20px;
+  padding-bottom: 10px;
+  font-size: 1.1rem;
+  
+  
+}
+
+
+
+
