--- a/assets/ananke/css/custom.css
+++ b/assets/ananke/css/custom.css
@@ -82,13 +82,37 @@
 
 }
 
-.oppdesc{
-  padding-bottom: 20px;
-  font-size:large
-}
-
 .oppcontnet{
   padding-bottom: 100px;
 
 }
 
+@media (max-width: 768px ){
+  .member-grid-container {
+    display: grid;
+    grid-template-columns: 1fr  ;
+    grid-gap: 40px; 
+  }
+
+  .executive-grid-container {
+    display: grid;
+    grid-template-columns: 1fr ;
+    grid-gap: 40px; 
+  }
+ 
+  .position-text{
+    padding-top: 5px;
+    padding-bottom: 15px;
+    font-size: 40%;
+    
+  }
+
+
+  .oppcontnet{
+    padding-bottom: 100px;
+    font-size: 40%;
+  
+  }
+  
+
+}
