Medai query lowkey bad

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -25,8 +25,8 @@
               <img class = "image_resize" src="{{.Params.member|absURL }}"> 
               <div class ="position-text font">{{.Params.position}}</div> 
               <div class ="name font">{{.Params.name |markdownify }}</div>
-              <div>{{.Params.degree| markdownify }}</div>
-              <div>{{ .Content }}</div>
+              <div class ="">{{.Params.degree| markdownify }}</div>
+              <div class =>{{ .Content }}</div>
             </div>
         {{end}}
         </div>
