--- a/assets/ananke/css/custom.css
+++ b/assets/ananke/css/custom.css
@@ -43,13 +43,12 @@
 }
 
 .title {
-  font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 0;
 }
 
 .name {
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 400;
   padding-bottom: 10px;
   
@@ -65,11 +64,10 @@
 
 /* FUCK YOU MO */
 
+
 .position-text{
-  padding-top: 20px;
+  padding-top: px;
   padding-bottom: 10px;
-  font-size: 1.1rem;
-  
 }
 
 .oppBG{
@@ -88,29 +86,31 @@
 }
 
 @media (max-width: 768px ){
+
   .member-grid-container {
-    display: grid;
-    grid-template-columns: 1fr  ;
-    grid-gap: 40px; 
+    grid-template-columns: 1fr 1fr  ;
+    grid-gap: 20px; 
   }
 
-  .executive-grid-container {
-    display: grid;
-    grid-template-columns: 1fr ;
-    grid-gap: 40px; 
-  }
- 
-  .position-text{
-    padding-top: 5px;
-    padding-bottom: 15px;
-    font-size: 40%;
-    
-  }
+  .executive-grid-container{
+    grid-template-columns: 1fr 1fr  ;
+    grid-gap: 20px;
 
+  }
+  
+  .image_resize{
+    width: 100px;
+   height: 100px;
+   object-fit: cover;
+   max-width: 100px !important;
+   max-height: 100px !important;
+   border-radius: 20px;
+   
+ }
 
   .oppcontnet{
     padding-bottom: 100px;
-    font-size: 40%;
+    font-size: 60%;
   
   }
   
